RESOLVED FIXED209628
Regression: Unable to trigger context menu on empty tabs in Safari
https://bugs.webkit.org/show_bug.cgi?id=209628
Summary Regression: Unable to trigger context menu on empty tabs in Safari
Chris Dumez
Reported 2020-03-26 16:35:38 PDT
Unable to trigger context menu on empty tabs in Safari.
Attachments
Patch (1.44 KB, patch)
2020-03-26 16:37 PDT, Chris Dumez
no flags
Patch (1.49 KB, patch)
2020-03-26 17:54 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-03-26 16:37:39 PDT
Geoffrey Garen
Comment 2 2020-03-26 16:40:25 PDT
Comment on attachment 394674 [details] Patch r=me Should we do something specific to skip mouseover and mousemove events? Would be a shame to launch a process just because a view was under the mouse.
Chris Dumez
Comment 3 2020-03-26 16:45:38 PDT
(In reply to Geoffrey Garen from comment #2) > Comment on attachment 394674 [details] > Patch > > r=me > > Should we do something specific to skip mouseover and mousemove events? > Would be a shame to launch a process just because a view was under the mouse. That is a good idea. I will see how easy that is.
Chris Dumez
Comment 4 2020-03-26 17:54:30 PDT
EWS
Comment 5 2020-03-26 18:36:04 PDT
Committed r259097: <https://trac.webkit.org/changeset/259097> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394684 [details].
Radar WebKit Bug Importer
Comment 6 2020-03-26 18:37:15 PDT
Note You need to log in before you can comment on or make changes to this bug.