Regression: Unable to trigger context menu on empty tabs in Safari https://bugs.webkit.org/show_bug.cgi?id=209628

Reviewed by Geoffrey Garen.

Launch the WebPageProxy's initial process if it starts processing mouse events.
As an optimization, the WebPageProxy only launches its initial process when it
really needs to.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::handleMouseEvent):


Canonical link: https://commits.webkit.org/222568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259097 268f45cc-cd09-0410-ab3c-d52691b4dbfc